Left4DeadHelper.Bindings.DevILNative/Bindings/Il.cs


            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilActiveImage(uint number);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilActiveLayer(uint number);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilActiveMipmap(uint number);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilApplyPal([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilApplyProfile(
                [MarshalAs(UnmanagedType.LPWStr)] string inProfile,
                [MarshalAs(UnmanagedType.LPWStr)] string outProfile);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilBindImage(uint image);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilBlit(uint source,
                int destX, int destY, int destZ,
                uint srcX, uint srcY, uint srcZ,
                uint width, uint height, uint depth);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilClampNTSC();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilClearColour(float red, float green, float blue, float alpha);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilClearImage();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilCloneCurImage();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern byte* ilCompressDXT(byte* data,
                uint width, uint height, uint depth, DxtcDefinition dxtcFormat, uint* dxtcSize);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilCompressFunc(Compression mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilConvertImage(DataFormat destFormat, DataType destType);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilConvertPal(PaletteType destFormat);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilCopyImage(uint src);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilCopyPixels(
                uint xOff, uint yOff, uint zOff,
                uint width, uint height, uint depth,
                DataFormat format, DataType type, IntPtr data);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilCreateSubImage(SubimageType type, uint num);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilDefaultImage();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilDeleteImage(uint num);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilDeleteImages(UIntPtr num, uint* images);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern ImageType ilDetermineType([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern ImageType ilDetermineTypeF(IntPtr fileHandle);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern ImageType ilDetermineTypeL(IntPtr lump, uint size);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilDisable(uint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilDxtcDataToImage();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilDxtcDataToSurface();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilEnable(uint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilFlipSurfaceDxtcData();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilFormatFunc(DataFormat mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilGenImages(UIntPtr num, uint* images);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilGenImage();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern byte* ilGetAlpha(DataType type);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilGetBoolean(uint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilGetBooleanv(uint mode, out bool param);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern byte* ilGetData();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilGetDXTCData(IntPtr buffer, uint bufferSize, DxtcDefinition dxtcFormat);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilGetError();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern int ilGetInteger(uint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilGetIntegerv(Value mode, out int param);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilGetLumpPos();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern byte* ilGetPalette();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.LPWStr)]
            public unsafe static extern string ilGetString(uint stringName);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilHint(Hint target, Hint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilInvertSurfaceDxtcDataAlpha();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilInit();
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilImageToDxtcData(DxtcDefinition format);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilIsDisabled(uint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilIsEnabled(uint mode);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilIsImage(uint image);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilIsValid(ImageType type, [MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilIsValidF(ImageType type, IntPtr fileHandle);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilIsValidL(ImageType type, IntPtr lump, uint size);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilKeyColour(float red, float green, float blue, float alpha);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoad(ImageType type, [MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadF(ImageType type, IntPtr fileHandle);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadImage([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x86.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadL(ImageType type, IntPtr lump, uint size);
